<resources>
  <string name="app_name">EliFUT Android</string>
  <string name="title_activity_main">EliFUT</string>
  <string name="fourth_division">4th Division</string>
  <string name="team_info">Team Info</string>
  <string name="manager_name">Manager: %1$s</string>
  <string name="league">League</string>
  <string name="select_country">Please select a country</string>
  <string name="whats_your_name">What\'s your name?</string>
  <string name="infos">Info</string>
  <string name="players">Players</string>
  <string name="match_paused">Match paused.</string>
  <string name="match_resumed">Match resumed.</string>
  <string name="end_first_half">End of first half.</string>
  <string name="end_match">End of match.</string>
  <string name="match_progress">Match progress</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="my_team">My team</string>
  <string name="current_league">Current league</string>
  <string name="schedule">Schedule</string>
  <string name="standings">Standings</string>
  <string name="team">Team</string>
  <string name="next_round_n_of_n">Next Round: %1$d of %2$d</string>
  <string name="round_results">Round %1$s results</string>
  <string name="player_details">Player Details</string>
  <string name="loading">Loading</string>
  <string name="please_wait_downloading_data">Downloading game data. This should take a minute or two. Please wait…</string>
  <string name="title_activity_blank">BlankActivity</string>
  <string name="action_replace">Replace</string>
  <string name="select_a_player">Select a player to switch</string>
  <string name="player_replaced">Player %1$s replaced with %2$s</string>
  <string name="action_abandon">Abandon League</string>
  <string name="abandon_confirmation">All you current progress will be lost!</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="winner">Winner!</string>
  <string name="defeated">Defeated.</string>
  <string name="draw">Draw.</string>
  <string name="you_finished_position">You\'ve finished in position %1$s.</string>
  <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
  <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
  <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
  <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
  <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
  <string name="license_failed">License check failed.</string>
  <string name="unknown_error">Unknown error.</string>
  <string name="online_friendly">Online friendly match</string>
  <string name="game_problem">An error occurred while starting the game. Please try again.</string>
  <string name="is_inviting_you">is challenging you to a game!</string>
  <string name="league_ended">League ended</string>
  <string name="round_x_match">Round %1$d match</string>
</resources>
