...
      android:layout_weight="0.3"
      android:src="@drawable/ic_pause_white_48dp" />

  </com.elifut.widget.CoordinatorAwareLinearLayout>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_done"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="@dimen/fab_margin"
    android:src="@drawable/ic_done"
    android:visibility="gone" />
...
